// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`suomifiHandler muistuttajan pdf viesti suomi.fi 1`] = `
Object {
  "hetu": "ABC",
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Väylävirasto",
  "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille suunnitelman nähtävilläolo",
    "nimi": "T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler muistuttajan pdf viesti suomi.fi ruotsi 1`] = `
Object {
  "hetu": "ABC",
  "lahiosoite": "Svart katten's gatan 13 c 13, B.O.X 1010",
  "maa": "SE",
  "nimi": "Minerva Marttila",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "SE-",
  "postitoimipaikka": "01230 STOCKHOLM, Ruotsii",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Väylävirasto",
  "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille suunnitelman nähtävilläolo",
    "nimi": "T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 1`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi
Suunnitelman asiatunnus: ely123

ELY-keskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 2`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi2
Suunnitelman asiatunnus: vayla123

Väylävirasto käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan sähköposti annettu 3`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi3
Suunnitelman asiatunnus: vayla123

Väylävirasto käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1


",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler muistuttajan viesti suomi.fi 1`] = `
Object {
  "hetu": "ABC",
  "otsikko": "Muistutus on vastaanotettu",
  "sisalto": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi
Suunnitelman asiatunnus: ely123

ELY-keskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
}
`;

exports[`suomifiHandler muistuttajan viesti suomi.fi paperiposti 1`] = `
Array [
  Object {
    "subject": "Muistutus on vastaanotettu",
    "text": "Muistutus on vastaanotettu
Suunnitelman nimi: Projektin nimi
Suunnitelman asiatunnus: ely123

ELY-keskus käsittelee muistutustasi asiatunnuksella. Mikäli haluat olla yhteydessä suunnitelmaan liittyen ilmoitathan asiatunnuksen viestissäsi.

Suunnitelman tietoihin pääset tästä linkistä: https://localhost:3000/suunnitelma/1/nahtavillaolo

Muistutus:
Muistutus 1

Muistutuksen mukana toimitettu seuraavannimiset liitteet:
test.txt
",
    "to": "test@test.fi",
  },
]
`;

exports[`suomifiHandler omistajan pdf viesti suomi.fi 1`] = `
Object {
  "hetu": "ABC",
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Väylävirasto",
  "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille suunnitelman nähtävilläolo",
    "nimi": "T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler omistajan pdf viesti suomi.fi hyväksymispäätös 1`] = `
Object {
  "hetu": "ABC",
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman hyväksymispäätöksestä",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelmaa koskevasta hyväksymispäätöksestä. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan tarkemmin päätökseen ja sen liitteenä oleviin suunnitelma-aineistoihin.

Ystävällisin terveisin
Pirkanmaan ELY-keskus",
  "suunnittelustaVastaavaViranomainen": "PIRKANMAAN_ELY",
  "tiedosto": Object {
    "kuvaus": "T431_4 Ilmoitus hyväksymispäätöksestä kiinteistönomistajille ja muistuttajille",
    "nimi": "T431_4 Ilmoitus hyvaksymispaatoksesta kiinteistonomistajille ja muistuttajille.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;

exports[`suomifiHandler omistajan pdf viesti suomi.fi nähtävilläolo 1`] = `
Object {
  "hetu": "ABC",
  "lahiosoite": "Osoite 1",
  "maa": "FI",
  "nimi": "Testi Teppo",
  "otsikko": "Ilmoitus suunnitelman nähtäville asettamisesta",
  "postinumero": "00100",
  "postitoimipaikka": "Helsinki",
  "sisalto": "Hei,

Olette saaneet kirjeen, jossa kerrotaan suunnitelman nähtäville asettamista sekä mahdollisuudesta tehdä suunnitelmasta muistutus. Kirje on tämän viestin liitteenä. Löydät kirjeestä linkin Valtion liikenneväylien suunnittelu -palveluun, missä pääsette tutustumaan suunnitelmaan tarkemmin.

Ystävällisin terveisin
Uudenmaan ELY-keskus",
  "suunnittelustaVastaavaViranomainen": "UUDENMAAN_ELY",
  "tiedosto": Object {
    "kuvaus": "T415 Ilmoitus kiinteistönomistajille suunnitelman nähtävilläolo",
    "nimi": "T415 Ilmoitus kiinteistonomistajille suunnitelman nahtavillaolo.pdf",
    "sisalto": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "ytunnus": undefined,
}
`;
